# yaml-serde-edit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: snapshots.rs  yaml_serde_edit.rs
tests/snapshots/: add_key.yml  deep_nesting.yml  mapping_to_sequence.yml  multiline_comment_after.yml  multiline_comment_before.yml  multiline_comment_inline.yml  multiline_edit_content.yml  multiline_nested_before.yml  multiline_nested_deep_inline.yml  nested_mapping.yml  nested_mapping_to_sequence.yml  remove_key.yml  scalar_change.yml  sequence_edit.yml  sequence_of_mappings.yml  sequence_to_mapping.yml  tagged_sibling.yml
